Task 4/task4.jjt
options {
	MULTI = true;
	VISITOR = true;
}

// Lexer
PARSER_BEGIN(Hudder)

	import java.util.Hashtable;

	import java.io.FileInputStream;
	import java.io.FileNotFoundException;

	import Model.Function;

	class Hudder {

		public static Hashtable<String, Function> functions = new Hashtable<String, Function>();
		
		public static void main(String[] args) throws ParseException, TokenMgrError, FileNotFoundException {
	
			Hudder parser = null;

			// If file name supplied use the file, otherwise use System.in
			if(args.length > 0) {
				parser = new Hudder(new FileInputStream("./Programs/" + args[0]));
			} else {
				parser = new Hudder(System.in);
			}

			SimpleNode tree = parser.Hudder();

			System.out.println();
			System.out.println("Program:");

			HudderDefaultVisitor printVisitor = new HudderDefaultVisitor();
			tree.jjtAccept(printVisitor, null);

			

		}
	}

PARSER_END(Hudder)

// Tokens for Lexical Analysis

SKIP : {" "} // Ignore whitespace
SKIP : {"\t"} // Ignore tabs
SKIP : {"\n" | "\r" | "\r\n"} // Ignore newlines

// Ignore multi line comments
SKIP : { <"|=">: INSIDE_COMMENT }

<INSIDE_COMMENT>
SKIP: { <"=|">: DEFAULT | <~[]> }

// Keywords
TOKEN : {< FUN: "fun" >}
TOKEN : {< HANDBACK: "handback" >}
TOKEN : {< REPEAT: "repeat" >}
TOKEN : {< UNTIL: "until" >}
TOKEN : {< WHENEVER: "whenever" >}
TOKEN : {< DO: "do" >}
TOKEN : {< OTHERWISE: "otherwise" >}
TOKEN : {< START: "start" >}
TOKEN : {< STOP: "stop" >}
TOKEN : {< AND: "and" >}
TOKEN : {< OR: "or" >}
TOKEN : {< VAR: "var" >}
TOKEN : {< OUTPUT: "output" >}
// Not required in Task 1
TOKEN : {< IF: "if">}
TOKEN : {< THEN: "then">}
TOKEN : {< ELSE: "else">}
TOKEN : {< NOT : "!" >}

TOKEN : {< IDENTIFIER: ["a"-"z","A"-"Z"](["a"-"z","A"-"Z","0"-"9","_"])* > }	
TOKEN : {< STRING : "\".*\"" >}

TOKEN : {< NUMBER: (["0"-"9"])+ >}

TOKEN : {< PLUS: "+" >}
TOKEN : {< MINUS: "-" >}
TOKEN : {< MULT: "*" >}
TOKEN : {< DIV: "/" >}
TOKEN : {< ASSIGNMENT: ":=" >}
TOKEN : {< EQUAL: "==">}
TOKEN : {< NOT_EQUAL: "!=" >}
TOKEN : {< GREATER: ">" >}
TOKEN : {< LESS: "<" >}
TOKEN : {< GREATER_EQUAL: ">=" >}
TOKEN : {< LESS_EQUAL: "<=" >}
TOKEN : {< O_PAR: "(" >}
TOKEN : {< C_PAR: ")" >}
TOKEN : {< COMMA: ",">}
TOKEN : {< SEMI_COLON: ";" >}


// Parser

SimpleNode Hudder() :
{}
{
	(FunctionDef())* MainProg() <EOF>
	 {
    	return jjtThis;
    }
}

void MainProg() #void :
{}
{
	ProgBlock()
}

void FunctionDef()  #Func(2) :
{ Token id; }
{
	<FUN> id = <IDENTIFIER> <O_PAR> ParamList() <C_PAR> ProgBlock()
	{
		jjtThis.value = id.image;
	}
}

void ParamList()  #ParamList(> -1) :
{}
{
	(Param() (<COMMA> Param() )* )?
}

void Param() #Param(0) :
{Token t;}
{
	t = <IDENTIFIER>
	{
		jjtThis.value = t.image;
	}
}

void ProgBlock()  #ProgBlock(> -1) :
{}
{
	<START> Statements() <STOP>
}

void Statements()  #void :
{}
{
	(Statement() <SEMI_COLON>)*
}

void Statement()  #Statement(0) :
{}
{
	LOOKAHEAD(2) (<VAR>)? <IDENTIFIER> <ASSIGNMENT> Expression()
	| <IDENTIFIER> <O_PAR> ParamListCall() <C_PAR>
	| <OUTPUT> (Expression() | <STRING>)
	| <WHENEVER> Condition() <DO> Statements() (<OTHERWISE> Statements())? <STOP>
	| <IF> Condition() <THEN> Statement() <ELSE> Statement()
	| <REPEAT> ProgBlock() <UNTIL> <O_PAR> Condition() <C_PAR>
	| <HANDBACK> Expression()
	{
		jjtThis.value = "Statement";
	}
}

void Expression()  #Expression(2) :
{Token t;}
{
	Term() ((t = <PLUS> { jjtThis.value = t.image; } | t = <MINUS> { jjtThis.value = t.image; }) Term())*
}


void Term()  #Term(0) :
{Token t;}
{
	Factor() ((t = <MULT> { jjtThis.value = t.image; } | t = <DIV> { jjtThis.value = t.image; }) Factor())*
}

void Factor()  #Factor(0) :
{}
{
	<IDENTIFIER> | <NUMBER> | (<PLUS> | <MINUS>)? <O_PAR> Expression() <C_PAR>
}

void Condition()  #Condition(0) :
{}
{
	<NOT> Condition()
	| LOOKAHEAD(2) Expression() (<EQUAL> | <NOT_EQUAL> | <GREATER> | <LESS> | <GREATER_EQUAL> | <LESS_EQUAL>) Expression()
	| <O_PAR> Condition() (<AND> | <OR>) Condition() <C_PAR>
}

void ParamListCall()  #ParamListCall(0) :
{}
{
	(Expression() (<COMMA> Expression())* )?
}
